force-app/main/default/objects/Campaign/fields/ROI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ROI_Percentage__c</fullName>
    <formula>( Total_Revenue__c -  Total_Cost__c )/ Total_Cost__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>