force-app/main/default/objects/Campaign/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>